--- a/client/src/reset.css
+++ b/client/src/reset.css
@@ -4,6 +4,7 @@
 */
 
 @import "~react-image-gallery/styles/css/image-gallery.css";
+@import 'antd/dist/antd.css';
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
